Replace resolvers with agnostic URL support
* Remove resolvers (keep test coverage for file, http, and hdfs URL
  types)
* Use url.openStream()
* Be agnostic to different URL types
* Depend on an HdfsURLStreamHandlerProvider for hdfs URL support
* Place hdfs provider in its own module/jar
* Clean up related POM and README stuff

This fixes #47

This supersedes #48 and #49 alternate fixes